<resources>
    <string name="app_name">Zeiterfassung</string>
    <string name="LabelStartTime">Startzeit:</string>
    <string name="LabelEndTime">Endzeit:</string>
    <string name="CommandStart">Starten</string>
    <string name="CommandEnd">Beenden</string>
    <string name="LabelPause">Pause:</string>
    <string name="LabelComment">Notitz:</string>
    <string name="MenuItemList">Auflistung</string>
  <string name="StartColumnHeader">Start</string>
    <string name="EndColumnHeader">Ende</string>
  <string name="WrongFormatMessage">FALSCHER FORMAT</string>
    <string name="MenuItemExport">Export</string>
  <string name="ButtonCancel">Abbrechen</string>
  <string name="ExportDialogTitle">Export ...</string>
  <string name="ExportDialogMessage">Daten werden exportiert!</string>
    <string name="MenuItemNew">Neu</string>
  <string name="SelectStartDateDialogTitle">Startdatum auswählen</string>
  <string name="SelectEndDateDialogTitle">Enddatum auswählen</string>
  <string name="SelectStartTimeDialogTitle">Startzeit auswählen</string>
  <string name="SelectEndTimeDialogTitle">Endzeit auswählen</string>
</resources>
