<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/ActivityPaddingVertical"
                android:paddingEnd="@dimen/ActivityPaddingHorizontal"
                android:paddingLeft="@dimen/ActivityPaddingHorizontal"
                android:paddingRight="@dimen/ActivityPaddingHorizontal"
                android:paddingStart="@dimen/ActivityPaddingHorizontal"
                android:paddingTop="@dimen/ActivityPaddingVertical"
                tools:context="de.mvhs.android.zeiterfassung.MainActivity">

  <TextView
    android:id="@+id/LabelStartTime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="@string/LabelStartTime"
    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

  <EditText
    android:id="@+id/StartTimeValue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/LabelStartTime"
    android:enabled="false"/>

  <TextView
      android:id="@+id/LabelEndTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/StartTimeValue"
      android:text="@string/LabelEndTime"
      android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

  <EditText
    android:id="@+id/EndTime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/LabelEndTime"
    android:enabled="false"/>

  <Button
    android:id="@+id/StartCommand"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/EndTime"
    android:text="@string/CommandStart"/>

  <Button
    android:id="@+id/EndCommand"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/StartCommand"
    android:text="@string/CommandEnd"/>

</RelativeLayout>