<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/ActivityPaddingVertical"
    android:paddingEnd="@dimen/ActivityPaddingHorizontal"
    android:paddingLeft="@dimen/ActivityPaddingHorizontal"
    android:paddingRight="@dimen/ActivityPaddingHorizontal"
    android:paddingStart="@dimen/ActivityPaddingHorizontal"
    android:paddingTop="@dimen/ActivityPaddingVertical">
    <!-- Center Helper -->
    <View
        android:id="@+id/CenterHelper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <!-- Start Time -->
    <TextView
        android:id="@+id/LabelStartDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/LabelStartTime"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <EditText
        android:id="@+id/StartDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LabelStartDateTime"
        android:layout_toLeftOf="@+id/CenterHelper"
        android:layout_toStartOf="@+id/CenterHelper"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/StartTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LabelStartDateTime"
        android:layout_toEndOf="@+id/CenterHelper"
        android:layout_toRightOf="@+id/CenterHelper"
        android:ems="10"
        android:inputType="time" />

    <!-- End Time -->
    <TextView
        android:id="@+id/LabelEndDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/StartTimeValue"
        android:text="@string/LabelEndTime"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <EditText
        android:id="@+id/EndDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LabelEndDateTime"
        android:layout_toLeftOf="@+id/CenterHelper"
        android:layout_toStartOf="@+id/CenterHelper"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/EndTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LabelEndDateTime"
        android:layout_toEndOf="@+id/CenterHelper"
        android:layout_toRightOf="@+id/CenterHelper"
        android:ems="10"
        android:inputType="time" />

    <!-- Pause -->
    <TextView
        android:id="@+id/LabelPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EndTimeValue"
        android:text="@string/LabelPause"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <EditText
        android:id="@+id/PauseValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LabelPause"
        android:ems="10"
        android:inputType="number" />

    <!-- Comment -->
    <TextView
        android:id="@+id/LabelComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PauseValue"
        android:text="@string/LabelComment"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <EditText
        android:id="@+id/CommentValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LabelComment"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" />
</RelativeLayout>