<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="EditModel"
            type="de.mvhs.android.zeiterfassung.EditViewModel" />
    </data>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/ActivityPaddingVertical"
        android:paddingEnd="@dimen/ActivityPaddingHorizontal"
        android:paddingLeft="@dimen/ActivityPaddingHorizontal"
        android:paddingRight="@dimen/ActivityPaddingHorizontal"
        android:paddingStart="@dimen/ActivityPaddingHorizontal"
        android:paddingTop="@dimen/ActivityPaddingVertical"
        app:columnCount="2"
        app:rowCount="8">
        <!-- Start Time -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelStartTime"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <EditText
            android:id="@+id/StartDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <EditText
            android:id="@+id/StartTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <!-- End Time -->
        <TextView
            android:id="@+id/LabelEndDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelEndTime"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="2" />

        <EditText
            android:id="@+id/EndDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <EditText
            android:id="@+id/EndTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@{EditModel.pause}"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <!-- Pause -->
        <TextView
            android:id="@+id/LabelPause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelPause"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="4" />

        <EditText
            android:id="@+id/PauseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@={EditModel.pause}"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="5" />

        <!-- Comment -->
        <TextView
            android:id="@+id/LabelComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelComment"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="6" />

        <EditText
            android:id="@+id/CommentValue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="@={EditModel.comment}"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_vertical"
            app:layout_row="7" />

    </android.support.v7.widget.GridLayout>
</layout>